--- a/src/partials/header-cover.html
+++ b/src/partials/header-cover.html
@@ -8,6 +8,7 @@
       <p id="dek">{{ dek }}</p>
     </if>
     <p class="byline">{{{ byline }}}</p>
+    <p class="byline">{{{ byline2 }}}</p> 
     
     <!-- To add more bylines, uncomment this, and add a "byline2:" in the google doc
       <p class="byline">{{{ byline2 }}}</p> 
